kubernetes/celery-deployment.yaml
# kubernetes/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
  namespace: darren-marie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
      - name: celery
        image: europe-west1-docker.pkg.dev/polytech-dijon/polytech-dijon/calculatrice-backend-darren-marie:v1
        imagePullPolicy: Always 
        command: ["/bin/sh", "-c"]
        args:
          - |
            # Celery lira les variables ENV pour savoir où se connecter
            celery -A calcul_api worker --loglevel=info
        resources:
            requests:
              cpu : "4m"
              memory: "32Mi"
