kubernetes/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: darren-marie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            requests:
              cpu : "4m"
              memory: "32Mi"   
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: darren-marie
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
    - protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP
